<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_shopping_cart"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_contact_support"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_client_debug"
            android:icon="@drawable/ic_home_construction"
            android:title="@string/menu_client_debug_title" />
    </group>
</menu>