<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.theroughstallions.genki.ui.home.HomeFragment"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.theroughstallions.genki.ui.fragments.SettingsFragment"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.theroughstallions.genki.ui.fragments.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

</navigation>